# CV-builder

./: .gitignore  README.md  cv_tailor.spec  main.py  pyproject.toml  requirements.txt  test_live.py  test_real_profile.py  test_smoke.py
cv_tailor/: __init__.py  claude_client.py  config.py  constants.py  docx_builder.py  extract.py  profile.py  prompts.py  tracker.py  utils.py  workers.py
cv_tailor/gui/: bulk_tab.py  main_window.py  profile_editor.py  profile_tab.py  settings_tab.py  single_job_tab.py  styles.py  tracker_tab.py  widgets.py
tests/: test_live.py  test_real_profile.py  test_smoke.py
